[project]
name = "doc-processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docling>=2.64.1",
    "groq>=0.37.1",
    "ipykernel>=7.1.0",
    "langchain-core>=1.1.3",
    "langchain-google-genai>=4.0.0",
    "langchain-groq>=1.1.0",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.0.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
]
